--- a/Character-Creator/Character-Creator.csproj
+++ b/Character-Creator/Character-Creator.csproj
@@ -7,4 +7,10 @@
     <RootNamespace>Character_Creator</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.4" />
+  </ItemGroup>
+
 </Project>
