--- a/Character-Creator/appsettings.json
+++ b/Character-Creator/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=C:\\Users\\callu\\Documents\\GitHub\\Character-Creator\\Character-Creator\\Database\\Character-Creator-database.db"
+  }
 }
