connectionstring no longer null
in test, in memory database is now passing through the constructor but no table is made

--- a/Character-Creator.nUnitTests/Character-Creator.nUnitTests.csproj
+++ b/Character-Creator.nUnitTests/Character-Creator.nUnitTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -24,6 +24,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Character-Creator\Character-Creator.csproj" />
   </ItemGroup>
 
   <ItemGroup>
